--- a/verifiers/verifiers_values.yaml
+++ b/verifiers/verifiers_values.yaml
@@ -3,3 +3,6 @@ values:
   # This file should not contain any templated values, as it will be used to provide values to the other templated files
   yes: "Yes"
   no: "No"
+  confidentiality: "confidentiality"
+  integrity: "integrity"
+  availability: "availability"
