alpha of new manage actions

--- a/manage/manage_texts.yaml
+++ b/manage/manage_texts.yaml
@@ -1,6 +1,9 @@
 ---
 output-texts:
-  success: "The following metadata was submitted as the approved version of threat model with ID '{{ ID }}'"
+  success-approver: "The following metadata for threat model with ID '{{ ID }}' was submitted, it is not approved until the changes are merged to the official record"
+  success-submitter: "The following metadata for threat model with ID '{{ ID }}' was submitted, please let an approver know"
   no-version-history: "Could not find entry in version history table for threat model current version '{{ current_version }}'"
   no-index-ID: "Could not find metadata index entry for ID '{{ ID }}'.  Valid IDs must exist in the metadata index file.  New IDs can be created using manage.craete"
+  index-entry-exists: "Cannot create ID for threat model with scheme '{{ scheme }}' and location '{{ location }}' as that scheme/location is used by threat model with ID '{{ ID }}'"
   cant-update-approved-version: "The threat model with ID '{{ ID }}' submitted has a current version of '{{ approved-version }}' which is the same as the currently approved version for this threat model.  Updating approved versions of threat models is not supported."
+  internal-error: "An internal error occurred, please see logs for more detail"
