--- a/schemes/confluence-scheme-1.0.yaml
+++ b/schemes/confluence-scheme-1.0.yaml
@@ -49,7 +49,10 @@ scheme:
                   query:
                     type: html-table-row
                     column-num: 2
-            - key: "approved-version"
+            - key: 
+                name: "approved-version"
+                tags:
+                  - "approved-version"
               value: 
                 get-data:
                   query:
