Adding files I forgot to add to last commit

--- a/manage/manage_texts.yaml
+++ b/manage/manage_texts.yaml
@@ -11,4 +11,10 @@ output-texts:
   approved-version-not-approved: "The submitted threat model with ID '{{ ID }}' has an approved version '{{ approved_version }}', but this version is not approved in the Version History table.  Please get an approver to approve this version, or change the approved version to the last version that was marked as approved in the Version History table"
   approved-version-not-updated: "The submitted threat model with ID '{{ ID }}' has current_version '{{ current_version }}' (which is marked as approved in the Version History table), but an approved version '{{ approved_version }}'.  If the current version is approved, the approved version should match it.  Please update the approved version in the Details Table"
   status-not-approved: "The submitted threat model with ID '{{ ID }}' has an approved version '{{ approved_version }}', which has been approved, but the status is not correct, it needs to be {{ approved_status }}"
+  no-document-id: "No document ID was found for the threat model at location {{ location }}"
+  no-approved-version: "There is no currently approved version of the Threat Model.  There needs to be an existing approved version, before you can check if changes require re-approval."
+  approved-version-expired: "The approved version for this Threat Model has expired as the approval was greater than {{ approval_expiry_days }} days ago.  A new approval is required, regardless of the changes."
+  approved-version-didnt-load: "Unable to load the approved version for comparison.  See logs for more details."
+  approval-required: "An approval is required for the updates made to the Threat Model."
+  no-approval-required: "No approval is required for the updates made to the Threat Model."
   internal-error: "An internal error occurred, please see logs for more detail"
