--- a/manage/manage_config.yaml
+++ b/manage/manage_config.yaml
@@ -1,6 +1,6 @@
 ---
 manage-config:
-  template-values-file: "verifiers/verifiers_values.yaml"
+  #template-values-file: "verifiers/verifiers_values.yaml"
   storage:
     gitrepo:
       remote: "git@github.com-threat-models:samadhicsec/threat-models.git"
@@ -12,5 +12,7 @@ manage-config:
     index-filename: "threatmodels.yaml"
     metadata-filename: "metadata.yaml"
     approved-status: {{ approved }}
+  check:
+    approval-expiry-days: 365
   output:
     template-text-file: "manage/manage_texts.yaml"
